--- a/ias-mentor/package.json
+++ b/ias-mentor/package.json
@@ -39,6 +39,7 @@
     "resend": "^4.6.0",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
+    "twilio": "^5.8.0",
     "zod": "^3.24.2"
   },
   "devDependencies": {
