--- a/ias-mentor/package.json
+++ b/ias-mentor/package.json
@@ -27,6 +27,7 @@
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "critters": "^0.0.23",
     "embla-carousel-react": "^8.6.0",
     "firebase": "^11.8.1",
     "framer-motion": "^12.6.5",
