--- a/ias-mentor/vercel.env.example
+++ b/ias-mentor/vercel.env.example
@@ -14,7 +14,7 @@ NEXT_PUBLIC_ADMIN_SECRET=ADMIN_SECRET
 
 # WhatsApp Configuration
 NEXT_PUBLIC_WHATSAPP_NUMBER=919876543210
-NEXT_PUBLIC_UPI_ID=yourwebsite@upi
+NEXT_PUBLIC_UPI_ID=theiasmentor-1@oksbi
 
 # Firebase Service Account (Optional - for server-side operations)
 # FIREBASE_SERVICE_ACCOUNT_KEY={"type":"service_account","project_id":"...","private_key_id":"...","private_key":"...","client_email":"...","client_id":"...","auth_uri":"...","token_uri":"...","auth_provider_x509_cert_url":"...","client_x509_cert_url":"..."} 
